data/all_generated_tests/raw_wast_tests/br_if_EdgeCaseFailuresinbr_table_1917.wast
;; 8. **Test 8: `br_if` instruction with an operand stack underflow scenario**    - **Constraint**: Ensures the operand stack meets minimal depth requirements.    - **Check**: Tests for correct exception handling or error state.    - **Relation to Edge Cases**: Confirms if `br_table` manages stack underflows correctly, similar to `br_if` underflows.

(assert_invalid
  (module (func $test-operand-stack-underflow
    (block (result i32) (br_if 0))
  ))
  "type mismatch"
)